--- a/tablaperiodica.html
+++ b/tablaperiodica.html
@@ -98,6 +98,7 @@
     </style>
 </head>
 <body>
+    <H1 style="text-align: margin-left;"> Tabla Periódica</H1>
     <table border="2">
         <tr><!--primera fila-->
             <td class="azuloscuro">1<br> H<br> Hidrogeno <br> 1.0079</td>
@@ -257,3 +258,4 @@
 </body>
 
 </html>
+
