Modify login form placeholders in index.html
Updated email and password placeholders in login form.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
   <main>
     <section>
-      <h2 id="catalogo-titulo">Catálogo</h2>
+     <h2 id="catalogo-titulo">Catálogo</h2>
+
       <div id="catalogo-productos"></div>
     </section>
 
@@ -32,15 +33,15 @@
     </aside>
   </main>
 
-  <!-- Modal de login -->
+ 
   <div id="modal" class="modal">
     <div class="modal-content">
       <h3>Iniciar sesión</h3>
       <form id="login-form">
         <label>Email</label>
-        <input type="email" id="email" required placeholder="juan@tienda.com">
+        <input type="email" id="email" required placeholder="Juan.025@tiendaonlineTatis.co">
         <label>Contraseña</label>
-        <input type="password" id="password" required placeholder="123456">
+        <input type="password" id="password" required placeholder="Abc123.">
         <div class="acciones">
           <button type="button" id="btn-cancel">Cancelar</button>
           <button type="submit" class="btn">Entrar</button>
