--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
   <main>
     <section>
-     <h2 id="catalogo-titulo">Catálogo</h2>
-
+      <h2 id="catalogo-titulo">Catálogo</h2>
       <div id="catalogo-productos"></div>
     </section>
 
@@ -33,13 +32,13 @@
     </aside>
   </main>
 
- 
+  <!-- Modal de login -->
   <div id="modal" class="modal">
     <div class="modal-content">
       <h3>Iniciar sesión</h3>
       <form id="login-form">
         <label>Email</label>
-        <input type="email" id="email" required placeholder="Juan.025@tiendaonlineTatis.co">
+        <input type="email" id="email" required placeholder="juan@example.com">
         <label>Contraseña</label>
         <input type="password" id="password" required placeholder="Abc123.">
         <div class="acciones">
