--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1>Tienda Online Tatis</h1>
     <div id="login-area">
       <div id="user-badge" style="display:none">Conectado: <span id="user-name"></span></div>
-      <button class="btn" id="btn-login">Iniciar sesión</button>
+      <button class="btn" id="btn-login">Iniciar sesion</button>
     </div>
   </header>
 
   <main>
     <section>
-      <h2 id="catalogo-titulo">Catálogo</h2>
+      <h2 id="catalogo-titulo">Catalogo</h2>
       <div id="catalogo-productos"></div>
     </section>
 
@@ -32,14 +32,13 @@
     </aside>
   </main>
 
-  <!-- Modal de login -->
   <div id="modal" class="modal">
     <div class="modal-content">
-      <h3>Iniciar sesión</h3>
+      <h3>Iniciar sesion</h3>
       <form id="login-form">
         <label>Email</label>
-        <input type="email" id="email" required placeholder="juan@example.com">
-        <label>Contraseña</label>
+        <input type="email" id="email" required placeholder="Juan.025@tiendaonlineTatis.co">
+        <label>Contrasena</label>
         <input type="password" id="password" required placeholder="Abc123.">
         <div class="acciones">
           <button type="button" id="btn-cancel">Cancelar</button>
