--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header>
     <h1>Tienda Online Tatis</h1>
+
     <div id="login-area">
-      <div id="user-badge" style="display:none">Conectado: <span id="user-name"></span></div>
-      <button class="btn" id="btn-login">Iniciar sesion</button>
+      <div id="user-badge" style="display:none">
+        Conectado: <span id="user-name"></span>
+      </div>
+      <button class="btn" id="btn-login">Iniciar sesión</button>
     </div>
   </header>
 
   <main>
     <section>
-      <h2 id="catalogo-titulo">Catalogo</h2>
+      <h2 id="catalogo-titulo">Catálogo</h2>
+
+      
+
       <div id="catalogo-productos"></div>
     </section>
 
@@ -25,6 +32,7 @@
       <h2>Carrito</h2>
       <div id="cart-items" class="cart-items"></div>
       <div id="cart-total" class="total">Total: $0.00</div>
+
       <div class="acciones-carrito">
         <button id="btn-clear" class="btn rojo">Vaciar</button>
         <button id="btn-checkout" class="btn">Pagar</button>
@@ -32,27 +40,30 @@
     </aside>
   </main>
 
+  <!-- Modal de login -->
   <div id="modal" class="modal">
     <div class="modal-content">
-      <h3>Iniciar sesion</h3>
+      <h3>Iniciar sesión</h3>
+
       <form id="login-form">
         <label>Email</label>
-        <input type="email" id="email" required placeholder="Juan.025@tiendaonlineTatis.co">
-        <label>Contrasena</label>
+        <input type="email" id="email" required placeholder="Juan.025@Tienda.co">
+
+        <label>Contraseña</label>
         <input type="password" id="password" required placeholder="Abc123.">
+
         <div class="acciones">
           <button type="button" id="btn-cancel">Cancelar</button>
           <button type="submit" class="btn">Entrar</button>
         </div>
       </form>
+
     </div>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
-
-
 
 
 
